# sphinxcontrib-budoux

./: .buildinfo  .editorconfig  .gitignore  README.rst  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: github-pages.yml  main.yml  release.yml
_static/: documentation_options.js
doc/: conf.py  index.rst
sphinxcontrib/: budoux.py
tests/: conftest.py  test_it.py
tests/test-root/: conf.py  index.rst
