[tool.poetry]
name = "sphinxcontrib-budoux"
version = "0.1.6"
description = "This is Sphinx extension to break line of heading texts by BudouX."
license = "Apache-2.0"
authors = ["Kazuya Takei <myself@attakei.net>"]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages = [
    { include = "sphinxcontrib" },
]

[tool.poetry.dependencies]
python = "^3.7 | ^3.8 | ^3.9 | ^3.10 | ^3.11 | ^3.12"
Sphinx = "*"
BudouX = "*"
beautifulsoup4 = "*"

[tool.poetry.dev-dependencies]
sphinx-rtd-theme = "^1.0.0"
pytest = "^7.1.2"
black = "^22.3.0"
typing-extensions = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
